[package]
name = "reisplanner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
protobuf = "3.4.0"
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_repr = "0.1.19"
httpdate = "1.0.3"
zip = "2.1.3"
chrono = "0.4.38"
rbs = "4.5.13"
rbatis = "4.5.24"
rbdc-sqlite = "4.5.4"
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
protobuf-codegen = "3.4.0"