[package]
name = "reisplanner-algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
reisplanner-gtfs = { path = "../reisplanner-gtfs", package = "reisplanner-gtfs" }
tokio = { version = "1.38.0", features = ["full"] }
rbs = { git = "https://github.com/Davvos11/rbatis", package = "rbs" }
rbatis = { git = "https://github.com/Davvos11/rbatis" }
rbdc-sqlite = { git = "https://github.com/Davvos11/rbatis", package = "rbdc-sqlite" }
thiserror = "1.0.61"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.8"
