[package]
name = "reisplanner-algorithm"
version = "0.1.0"
edition = "2021"

[dependencies]
reisplanner-gtfs = { path = "../reisplanner-gtfs", package = "reisplanner-gtfs" }
reisplanner-iff = { path = "../reisplanner-iff", package = "reisplanner-iff" }
tokio = { version = "1.38.0", features = ["full"] }
rbs = "4.5.18"
rbatis = "4.5.29"
rbdc-sqlite = "4.5.5"
thiserror = "1.0.61"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
dot-writer = "0.1.4"

[dev-dependencies]
