[package]
name = "reisplanner-gtfs"
version = "0.1.0"
edition = "2021"
authors = ["vosdavid2@gmail.com"]

[dependencies]
reisplanner-utils = { path = "../reisplanner-utils", package = "reisplanner-utils" }
reqwest = { version = "0.12.4", features = ["blocking"] }
protobuf = "3.5.1"
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_repr = "0.1.19"
httpdate = "1.0.3"
zip = "2.1.3"
chrono = "0.4.38"
rbs = "4.5.18"
rbatis = "4.5.29"
rbdc-sqlite = "4.5.5"
tokio = { version = "1.38.0", features = ["full"] }
itertools = "0.13.0"
fastdate = "0.3.28"
indicatif = "0.17.8"
thiserror = "1.0.61"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
async-trait = "0.1.81"

[build-dependencies]
protobuf-codegen = "3.4.0"
vergen = { version = "9.0.0", features = ["build", "cargo"]}
