[package]
name = "reisplanner-iff"
version = "0.1.0"
edition = "2021"

[dependencies]
reisplanner-utils = { path = "../reisplanner-utils", package = "reisplanner-utils" }
tokio = { version = "1.38.0", features = ["full"] }
rbs = "4.5.18"
rbatis = "4.5.29"
rbdc-sqlite = "4.5.5"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
indicatif = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
csv = "1.3.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
